<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/padding_left_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="8dp" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_logo_min"
        android:fadingEdge="none"
        android:requiresFadingEdge="none"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <TextView
                android:id="@+id/lab_id_tarea"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/lab_id_tarea" />

            <EditText
                android:id="@+id/txt_id_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_id_tarea"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/lab_nombre"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_id_tarea"
                android:layout_marginTop="2dp"
                android:text="@string/lab_name" />

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_nombre"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/lab_descripcion"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_nombre"
                android:layout_marginTop="2dp"
                android:text="@string/lab_descripcion" />

            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_descripcion"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="false"
                android:gravity="top|left"
                android:inputType="none"
                android:lines="3" />

            <TextView
                android:id="@+id/lab_fecha_limite"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_descripcion"
                android:layout_marginTop="2dp"
                android:text="@string/lab_fecha_limite" />

            <EditText
                android:id="@+id/txt_fecha_limite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_fecha_limite"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/lab_importancia"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_fecha_limite"
                android:layout_marginTop="2dp"
                android:text="@string/lab_importancia" />

            <EditText
                android:id="@+id/txt_importancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_importancia"
                android:layout_marginTop="2dp"
                android:focusableInTouchMode="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/lab_estado"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_importancia"
                android:layout_marginTop="2dp"
                android:text="@string/lab_estado" />

            <Spinner
                android:id="@+id/spin_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_estado"
                android:layout_marginTop="2dp" />

            <TextView
                android:id="@+id/lab_comentario"
                style="@style/form_labs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spin_estado"
                android:layout_marginTop="2dp"
                android:text="@string/lab_comentario" />

            <EditText
                android:id="@+id/txt_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lab_comentario"
                android:layout_marginTop="2dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="3" />

            <Button
                android:id="@+id/but_guardar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/txt_comentario"
                android:background="@drawable/bg_btn"
                android:text="@string/but_guardar"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>